# moon-dev-ai-agents-for-trading

./: .env example  .gitignore  AI_PROJECT_TRACKER.md  LEARN_GITHUB.md  PROMPTS.md  README.md  ROADMAP.md  get_ohlcv_data.py  hello.py  pyproject.toml  requirements.txt  setup.py
data/sentiment/: bitcoin_sentiment_20250109.csv  bitcoin_tweets.csv  ethereum_sentiment_20250109.csv  ethereum_tweets.csv  solana_sentiment_20250109.csv  solana_tweets.csv
docs/: README.md  api.md  docsplan.md
docs/examples/: examplespan.md
src/: __init__.py  config.py  ezbot.py  main.py  nice_funcs.py  nice_funcs_hl.py  nice_funs_hl.py
src/agents/: README.md  api copy.py  api.py  base_agent.py  chartanalysis_agent.py  coingecko_agent.py  copybot_agent.py  exchangearb_agent.py  focus_agent.py  funding_agent.py  fundingarb_agent.py  liquidation_agent.py  listingarb_agent.py  risk_agent.py  sentiment_agent.py  server.py  strategy_agent.py  trading_agent.py  whale_agent.py
src/core/: bot.py  config.py
src/core/utils/: nice_funcs.py
src/data/: current_allocation.csv  ohlcv_collector.py  oi_history.csv  portfolio_balance.csv  sentiment_history.csv
src/data/ohlcv/: 9BB6NFEcjBCtnNLFko2FqVQBq8HHM13kCyYcdQbgpump_20250101_130515.csv  Df6yfrKC8kZE3KNkrHERKzAetSxbrWeniQfyJY4Jpump_20250101_130524.csv  ED5nyyWEzpPPiWimP8vYm7sD7TD3LAt3Q3gRTWHzPJBY_latest.csv  (+4 more)
src/scripts/: coingecko_exchangeless_tokens.py  deepseek_backtest.py  fundingarb_calc.py  token_list_tool.py  twitter_login.py
src/strategies/: README.md  __init__.py  base_strategy.py  example_strategy.py
src/utils/: validation.py
(+8 files in other folders)
