[project]
name = "moon-dev-ai-agents-for-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji==0.6.0",
    "openai>=1.59.7",
    "setuptools",
    "torch>=2.5.1",
    "transformers>=4.48.0",
    "twikit>=2.2.1",
]
